--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -7,25 +7,25 @@
   <app-branding *ngIf="showBranding"></app-branding>
   <span fxFlex></span>
 
-  <app-github-button></app-github-button>
+  <!-- <app-github-button></app-github-button> -->
 
-  <button mat-icon-button class="matero-toolbar-button">
+  <!-- <button mat-icon-button class="matero-toolbar-button">
     <mat-icon>search</mat-icon>
-  </button>
+  </button> -->
 
-  <button mat-icon-button class="matero-toolbar-button" fxHide.lt-sm
+  <!-- <button mat-icon-button class="matero-toolbar-button" fxHide.lt-sm
           (click)="toggleFullscreen()">
     <mat-icon>fullscreen</mat-icon>
-  </button>
+  </button> -->
 
   <app-notification fxHide.lt-sm></app-notification>
 
-  <app-translate></app-translate>
+  <!-- <app-translate></app-translate> -->
 
   <app-user></app-user>
 
-  <button mat-icon-button class="matero-toolbar-button" fxHide.lt-sm
+  <!-- <button mat-icon-button class="matero-toolbar-button" fxHide.lt-sm
           (click)="toggleSidenavNotice.emit()">
     <mat-icon>list</mat-icon>
-  </button>
+  </button> -->
 </mat-toolbar>
