--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="matero-toolbar">
+<mat-toolbar class="matero-toolbar" color="primary">
   <button mat-icon-button class="matero-toolbar-button" *ngIf="showToggle"
           (click)="toggleSidenav.emit()">
     <mat-icon>menu</mat-icon>
