--- a/src/app/routes/list-book/book/book.component.html
+++ b/src/app/routes/list-book/book/book.component.html
@@ -1,102 +1,130 @@
 <breadcrumb></breadcrumb>
+<div class="list-book-filters">
+    <mat-form-field>
+        <mat-label>Search</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+        <!-- <mat-icon matSuffix>search</mat-icon> -->
+    </mat-form-field>
+    <button type="button" mat-raised-button color="primary" (click)="addBook()">Add</button>
+</div>
 
 <div class="mat-elevation-z1">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <div class="example-container">
+        <table mat-table [dataSource]="dataSource" matSort>
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container>
+            <!-- Position Column -->
+            <ng-container matColumnDef="index">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="75px"> No. </th>
+                <td mat-cell *matCellDef="let element; let i = index" fxFlex="75px"> {{i + 1}} </td>
+            </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
+            <!-- Prospect Name Column -->
+            <ng-container matColumnDef="prospectName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="150px"> Prospect Name </th>
+                <td mat-cell *matCellDef="let element" fxFlex="150px"> {{element.prospectName}} </td>
+            </ng-container>
 
-        <!-- Age Column -->
-        <ng-container matColumnDef="age">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
-            <td mat-cell *matCellDef="let element"> {{element.age}} </td>
-        </ng-container>
+            <!-- Age Column -->
+            <ng-container matColumnDef="age">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="75px"> Age </th>
+                <td mat-cell *matCellDef="let element" fxFlex="75px"> {{element.age}} </td>
+            </ng-container>
 
-        <!-- Mobile Column -->
-        <ng-container matColumnDef="mobile">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Mobile </th>
-            <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
-        </ng-container>
+            <!-- Mobile Column -->
+            <ng-container matColumnDef="mobile">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="150px"> Mobile </th>
+                <td mat-cell *matCellDef="let element" fxFlex="150px"> {{element.mobile}} </td>
+            </ng-container>
 
-        <!-- Address Column -->
-        <ng-container matColumnDef="address">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-            <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-        </ng-container>
+            <!-- Address Column -->
+            <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="200px"> Address </th>
+                <td mat-cell *matCellDef="let element" fxFlex="200px"> {{element.city}}, {{element.state}}</td>
+            </ng-container>
 
-        <!-- Marital Status Column -->
-        <ng-container matColumnDef="maritalStatus">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Marital Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.maritalStatus}} </td>
-        </ng-container>
+            <!-- Marital Status Column -->
+            <ng-container matColumnDef="maritalStatus">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="100px"> Marital Status </th>
+                <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.maritalStatus}} </td>
+            </ng-container>
 
-        <!-- Relation Column -->
-        <ng-container matColumnDef="relation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Relation </th>
-            <td mat-cell *matCellDef="let element"> {{element.relation}} </td>
-        </ng-container>
+            <!-- Occupation Column -->
+            <ng-container matColumnDef="occupation">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="100px"> Occupation </th>
+                <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.occupation}} </td>
+            </ng-container>
 
-        <!-- Relation Degree Column -->
-        <ng-container matColumnDef="degreeOfRelation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Relation Degree </th>
-            <td mat-cell *matCellDef="let element"> {{element.degreeOfRelation}} </td>
-        </ng-container>
+            <!-- Income Column -->
+            <ng-container matColumnDef="income">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="100px"> Income </th>
+                <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.income}} </td>
+            </ng-container>
 
-        <!-- Occupation Column -->
-        <ng-container matColumnDef="occupation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Occupation </th>
-            <td mat-cell *matCellDef="let element"> {{element.occupation}} </td>
-        </ng-container>
+            <!-- Relation Column -->
+            <ng-container matColumnDef="relation">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="100px"> Relation </th>
+                <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.relation}} </td>
+            </ng-container>
 
-        <!-- Income Column -->
-        <ng-container matColumnDef="income">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Income </th>
-            <td mat-cell *matCellDef="let element"> {{element.income}} </td>
-        </ng-container>
+            <!-- Relation Degree Column -->
+            <ng-container matColumnDef="degreeOfRelation" >
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="150px"> Relation Degree </th>
+                <td mat-cell *matCellDef="let element" fxFlex="150px"> {{element.degreeOfRelation}} </td>
+            </ng-container>
 
-        <!-- Profile Column -->
-        <ng-container matColumnDef="profile">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Profile </th>
-            <td mat-cell *matCellDef="let element"> {{element.profile}} </td>
-        </ng-container>
 
-        <!-- Remark Column -->
-        <ng-container matColumnDef="remark">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Remark </th>
-            <td mat-cell *matCellDef="let element"> {{element.remark}} </td>
-        </ng-container>
+            <!-- Profile Column -->
+            <ng-container matColumnDef="profile">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="75px"> Profile </th>
+                <td mat-cell *matCellDef="let element" fxFlex="75px"> {{element.profile}} </td>
+            </ng-container>
 
-        <!-- Action Column -->
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Remark </th>
-            <td mat-cell *matCellDef="let element"> <button mat-icon-button
-                        [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                    <mat-icon>more_vert</mat-icon>
-                </button>
-                <mat-menu #menu="matMenu">
-                    <button mat-menu-item>
-                        <span>Edit</span>
+            <!-- Remarks Column -->
+            <ng-container matColumnDef="remarks">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="100px"> Remark </th>
+                <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.remarks}} </td>
+            </ng-container>
+
+            <!-- isWorking Column -->
+            <ng-container matColumnDef="isWorking" >
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="75px"> isWorking </th>
+                <td mat-cell *matCellDef="let element" fxFlex="75px"> {{element.isWorking}} </td>
+            </ng-container>
+
+            <!-- inNextTarget Column -->
+            <ng-container matColumnDef="inNextTarget">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="100px"> inNextTarget </th>
+                <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.inNextTarget}} </td>
+            </ng-container>
+
+            <!-- status Column -->
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="75px"> Status </th>
+                <td mat-cell *matCellDef="let element" fxFlex="75px"> {{element.status}} </td>
+            </ng-container>
+
+            <!-- Action Column -->
+            <ng-container matColumnDef="actions" stickyEnd>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="50px"> Actions </th>
+                <td mat-cell *matCellDef="let element" fxFlex="50px"> <button mat-icon-button
+                            [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                        <mat-icon>more_vert</mat-icon>
                     </button>
-                    <button mat-menu-item>
-                        <span>Delete</span>
-                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item>
+                            <span>Edit</span>
+                        </button>
+                        <button mat-menu-item>
+                            <span>Delete</span>
+                        </button>
 
-                </mat-menu>
-            </td>
-        </ng-container>
+                    </mat-menu>
+                </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+    <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons></mat-paginator>
 </div>
