Added responsive and list book edit fix

--- a/src/app/routes/list-book/add-book/add-book.component.scss
+++ b/src/app/routes/list-book/add-book/add-book.component.scss
@@ -1,4 +1,9 @@
-
 .mat-dialog-actions{
     justify-content: flex-end;
+}
+
+@media (max-width: 620px){
+    .mat-form-field{
+        width: 100%;
+    }
 }
