--- a/src/app/routes/list-book/add-book/add-book.component.html
+++ b/src/app/routes/list-book/add-book/add-book.component.html
@@ -10,7 +10,7 @@
                         <input matInput type="text" formControlName="prospectName">
                     </mat-form-field>
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center flex-sm-column">
 
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Age</mat-label>
@@ -24,7 +24,7 @@
                     </mat-form-field>
 
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>City</mat-label>
                         <input matInput type="text" formControlName="city">
@@ -39,7 +39,7 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field appearance="outline" class="example-full-width">
                         <mat-label>Marital Status</mat-label>
                         <mat-select formControlName="maritalStatus">
@@ -53,7 +53,7 @@
                         <input matInput type="text" formControlName="occupation">
                     </mat-form-field>
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Income</mat-label>
                         <input matInput type="text" formControlName="income">
@@ -63,7 +63,7 @@
                         <input matInput type="text" formControlName="relation">
                     </mat-form-field>
                 </div>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Degree of Relation</mat-label>
                         <mat-select formControlName="degreeOfRelation">
@@ -87,7 +87,7 @@
                     <mat-label>Remarks</mat-label>
                     <input matInput type="text" formControlName="remarks">
                 </mat-form-field>
-                <div class="d-flex justify-content-between align-items-center flex-wrap">
+                <div class="d-flex justify-content-between align-items-center flex-sm-column flex-wrap">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>IsWorking</mat-label>
                         <mat-select formControlName="isWorking">
