--- a/src/app/routes/list-book/book/book.component.scss
+++ b/src/app/routes/list-book/book/book.component.scss
@@ -14,32 +14,16 @@ table {
   th, td{
     display: flex;
     align-items: center;
+  
   }
   .example-container {
     height: 400px;
     width: 1100px;
     max-width: 100%;
     overflow: auto;
-    .mat-table-sticky:first-child {
+    .mat-table-sticky:nth-child(2) {
       border-right: 1px solid #e0e0e0;
-    }
-    
-    .mat-table-sticky:last-child {
-      border-left: 1px solid #e0e0e0;
-    }
-    
-  
-    td.mat-column-star {
-      width: 20px;
-      padding-right: 8px;
-    }
-    
-    th.mat-column-position, td.mat-column-position {
-      padding-left: 8px;
-    }
-    
-    .mat-table-sticky:first-child {
-      border-right: 1px solid #e0e0e0;
+      padding-left: 10px !important;
     }
     
     .mat-table-sticky:last-child {
