--- a/src/app/routes/list-book/add-book/add-book.component.html
+++ b/src/app/routes/list-book/add-book/add-book.component.html
@@ -1,37 +1,39 @@
 <form [formGroup]="addBookForm" (ngSubmit)="addBook()">
     <div class="mat-dialog-width">
-        <h1 mat-dialog-title>Add Book</h1>
+        <h1 mat-dialog-title>{{data.title}}</h1>
         <div mat-dialog-content>
             <div class="modal-dialog">
 
                 <div>
                     <mat-form-field class="example-full-width w-full" appearance="outline">
-                        <mat-label>Prospect Name</mat-label>
+                        <mat-label>Prospect Name *</mat-label>
                         <input matInput type="text" formControlName="prospectName">
+                        <mat-error *ngIf="addBookForm.controls.prospectName.invalid">
+                            {{getErrorMessage()}}</mat-error>
                     </mat-form-field>
                 </div>
                 <div class="d-flex justify-content-between align-items-center flex-sm-column">
 
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Age</mat-label>
+                        <mat-label>Age *</mat-label>
                         <input matInput type="number" formControlName="age">
                     </mat-form-field>
 
 
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Mobile</mat-label>
+                        <mat-label>Mobile *</mat-label>
                         <input matInput type="text" formControlName="mobile">
                     </mat-form-field>
 
                 </div>
                 <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>City</mat-label>
+                        <mat-label>City *</mat-label>
                         <input matInput type="text" formControlName="city">
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>State</mat-label>
+                        <mat-label>State *</mat-label>
                         <mat-select formControlName="state">
                             <mat-option *ngFor="let state of states" [value]="state.key">
                                 {{state.value}}
@@ -41,7 +43,7 @@
                 </div>
                 <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field appearance="outline" class="example-full-width">
-                        <mat-label>Marital Status</mat-label>
+                        <mat-label>Marital Status *</mat-label>
                         <mat-select formControlName="maritalStatus">
                             <mat-option *ngFor="let mStatus of maritalStatus" [value]="mStatus">
                                 {{mStatus}}
@@ -49,23 +51,23 @@
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Occupation</mat-label>
+                        <mat-label>Occupation *</mat-label>
                         <input matInput type="text" formControlName="occupation">
                     </mat-form-field>
                 </div>
                 <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Income</mat-label>
+                        <mat-label>Income *</mat-label>
                         <input matInput type="text" formControlName="income">
                     </mat-form-field>
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Relation</mat-label>
+                        <mat-label>Relation *</mat-label>
                         <input matInput type="text" formControlName="relation">
                     </mat-form-field>
                 </div>
                 <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Degree of Relation</mat-label>
+                        <mat-label>Degree of Relation *</mat-label>
                         <mat-select formControlName="degreeOfRelation">
                             <mat-option *ngFor="let relation of degreeOfRelation"
                                         [value]="relation">
@@ -74,7 +76,7 @@
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Profile</mat-label>
+                        <mat-label>Profile *</mat-label>
                         <mat-select formControlName="profile">
                             <mat-option *ngFor="let profile of profiles"
                                         [value]="profile">
@@ -84,12 +86,13 @@
                     </mat-form-field>
                 </div>
                 <mat-form-field class="example-full-width w-full" appearance="outline">
-                    <mat-label>Remarks</mat-label>
+                    <mat-label>Remarks *</mat-label>
                     <input matInput type="text" formControlName="remarks">
                 </mat-form-field>
-                <div class="d-flex justify-content-between align-items-center flex-sm-column flex-wrap">
+                <div
+                     class="d-flex justify-content-between align-items-center flex-sm-column flex-wrap">
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>IsWorking</mat-label>
+                        <mat-label>IsWorking *</mat-label>
                         <mat-select formControlName="isWorking">
                             <mat-option value="true"> True
                             </mat-option>
@@ -99,7 +102,7 @@
                     </mat-form-field>
 
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>InNextTarget</mat-label>
+                        <mat-label>InNextTarget *</mat-label>
                         <mat-select formControlName="inNextTarget">
                             <mat-option value="true"> True
                             </mat-option>
@@ -109,7 +112,7 @@
                     </mat-form-field>
 
                     <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Status</mat-label>
+                        <mat-label>Status *</mat-label>
                         <mat-select formControlName="status">
                             <mat-option *ngFor="let sta of status"
                                         [value]="sta"> {{sta}}
@@ -120,7 +123,8 @@
             </div>
         </div>
         <div mat-dialog-actions>
-            <button mat-button mat-dialog-close color="primary" type="submit">Save</button>
+            <button mat-button mat-dialog-close color="primary" type="submit"
+                    [disabled]="!addBookForm.valid">Save</button>
             <button mat-button mat-dialog-close cdkFocusInitial>Close</button>
         </div>
     </div>
