--- a/src/app/routes/list-book/book/book.component.scss
+++ b/src/app/routes/list-book/book/book.component.scss
@@ -1,5 +1,5 @@
 table {
-    max-width: 1200px;
+    max-width: 100vw;
   }
 
   th.mat-sort-header-sorted {
@@ -17,13 +17,11 @@ table {
   
   }
   .example-container {
-    height: 400px;
-    width: 1100px;
+    width: 100vw;
     max-width: 100%;
     overflow: auto;
     .mat-table-sticky:nth-child(2) {
       border-right: 1px solid #e0e0e0;
-      padding-left: 10px !important;
     }
     
     .mat-table-sticky:last-child {
