--- a/src/app/theme/style/_variables.scss
+++ b/src/app/theme/style/_variables.scss
@@ -69,6 +69,7 @@ $display: (
   'inline': 'inline',
   'block': 'block',
   'inline-block': 'inline-block',
+  'none': 'none'
 );
 
 $justify-content:(
