--- a/src/app/routes/list-book/add-book/add-book.component.html
+++ b/src/app/routes/list-book/add-book/add-book.component.html
@@ -48,12 +48,12 @@
 
                     <mat-form-field appearance="outline" class="example-full-width">
                         <mat-label>State *</mat-label>
-                        <mat-select formControlName="state">
-                            <mat-option *ngFor="let state of states" [value]="state.key">
-                                {{state.value}}
+                        <mat-select formControlName="stateName">
+                            <mat-option *ngFor="let state of states" [value]="state.id">
+                                {{state.name}}
                             </mat-option>
                         </mat-select>
-                        <mat-error *ngIf="addBookForm.controls.state.invalid">
+                        <mat-error *ngIf="addBookForm.controls.stateName.invalid">
                             <app-show-error [ctrl]="addBookForm.get('state')">
                             </app-show-error>
                         </mat-error>
@@ -62,13 +62,13 @@
                 <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field appearance="outline" class="example-full-width">
                         <mat-label>Marital Status *</mat-label>
-                        <mat-select formControlName="maritalStatus">
-                            <mat-option *ngFor="let mStatus of maritalStatus" [value]="mStatus">
-                                {{mStatus}}
+                        <mat-select formControlName="maritalStatusName">
+                            <mat-option *ngFor="let mStatus of maritalStatus" [value]="mStatus.id">
+                                {{mStatus.value}}
                             </mat-option>
                         </mat-select>
-                        <mat-error *ngIf="addBookForm.controls.maritalStatus.invalid">
-                            <app-show-error [ctrl]="addBookForm.get('maritalStatus')">
+                        <mat-error *ngIf="addBookForm.controls.maritalStatusName.invalid">
+                            <app-show-error [ctrl]="addBookForm.get('maritalStatusName')">
                             </app-show-error>
                         </mat-error>
                     </mat-form-field>
@@ -98,26 +98,26 @@
                 <div class="d-flex justify-content-between align-items-center flex-sm-column">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Degree of Relation *</mat-label>
-                        <mat-select formControlName="degreeOfRelation">
+                        <mat-select formControlName="degreeOfRelationName">
                             <mat-option *ngFor="let relation of degreeOfRelation"
-                                        [value]="relation">
-                                {{relation}}
+                                        [value]="relation.id">
+                                {{relation.value}}
                             </mat-option>
                         </mat-select>
-                        <mat-error *ngIf="addBookForm.controls.degreeOfRelation.invalid">
-                            <app-show-error [ctrl]="addBookForm.get('degreeOfRelation')">
+                        <mat-error *ngIf="addBookForm.controls.degreeOfRelationName.invalid">
+                            <app-show-error [ctrl]="addBookForm.get('degreeOfRelationName')">
                             </app-show-error>
                         </mat-error>
                     </mat-form-field>
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Profile *</mat-label>
-                        <mat-select formControlName="profile">
+                        <mat-select formControlName="profileName">
                             <mat-option *ngFor="let profile of profiles"
-                                        [value]="profile">
-                                {{profile}}
+                                        [value]="profile.id">
+                                {{profile.value}}
                             </mat-option>
                         </mat-select>
-                        <mat-error *ngIf="addBookForm.controls.profile.invalid">
+                        <mat-error *ngIf="addBookForm.controls.profileName.invalid">
                             <app-show-error [ctrl]="addBookForm.get('profile')">
                             </app-show-error>
                         </mat-error>
@@ -131,41 +131,26 @@
                         </app-show-error>
                     </mat-error>
                 </mat-form-field>
-                <!-- <div
-                     class="d-flex justify-content-between align-items-center flex-sm-column flex-wrap">
-                    <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>IsWorking *</mat-label>
-                        <mat-select formControlName="isWorking">
-                            <mat-option value="true"> True
-                            </mat-option>
-                            <mat-option value="false"> False
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
 
-                    <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>InNextTarget *</mat-label>
-                        <mat-select formControlName="inNextTarget">
-                            <mat-option value="true"> True
-                            </mat-option>
-                            <mat-option value="false"> False
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
 
-                    <mat-form-field class="example-full-width" appearance="outline">
-                        <mat-label>Status *</mat-label>
-                        <mat-select formControlName="status">
-                            <mat-option *ngFor="let sta of status"
-                                        [value]="sta"> {{sta}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div> -->
+
+                <mat-form-field class="example-full-width" appearance="outline" *ngIf="data.prospect">
+                    <mat-label>Status *</mat-label>
+                    <mat-select formControlName="prospectStatusName">
+                        <mat-option *ngFor="let status of prospectStatus"
+                                    [value]="status.id"> {{status.value}}
+                        </mat-option>
+                        <mat-error *ngIf="addBookForm.controls.prospectStatusName.invalid">
+                            <app-show-error [ctrl]="addBookForm.get('prospectStatusName')">
+                            </app-show-error>
+                        </mat-error>
+                    </mat-select>
+                </mat-form-field>
+
             </div>
         </div>
         <div mat-dialog-actions>
-            <button mat-button mat-dialog-close color="primary" type="submit"
+            <button mat-button color="primary" type="submit"
                     [disabled]="!addBookForm.valid">Save</button>
             <button mat-button mat-dialog-close cdkFocusInitial>Close</button>
         </div>
