--- a/src/app/routes/list-book/book/book.component.html
+++ b/src/app/routes/list-book/book/book.component.html
@@ -5,7 +5,25 @@
         <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
         <!-- <mat-icon matSuffix>search</mat-icon> -->
     </mat-form-field>
-    <button type="button" mat-raised-button color="primary" (click)="addBook()">Add</button>
+    <div>
+        <button type="button" mat-raised-button color="primary" class="
+        m-r-8" (click)="addProspect()">Add Prospect</button>
+        <button type="button" mat-raised-button color="primary" class="
+        m-r-8" (click)="exportToExcel()"
+                *ngIf="listBookSettings && listBookSettings.isExportExcel">Export to
+            Excel</button>
+        <button mat-icon-button [matMenuTriggerFor]="menu"
+                *ngIf="listBookSettings && listBookSettings.isDownloadExcelFormat"
+                aria-label="Example icon-button with a menu">
+            <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>
+                <span>Export List Book
+                    Format</span>
+            </button>
+        </mat-menu>
+    </div>
 </div>
 
 <div class="mat-elevation-z1">
@@ -42,14 +60,14 @@
             <ng-container matColumnDef="address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="200px"> Address </th>
                 <td mat-cell *matCellDef="let element" fxFlex="200px"> {{element.city}},
-                    {{element.state}}</td>
+                    {{element.stateName}}</td>
             </ng-container>
 
             <!-- Marital Status Column -->
-            <ng-container matColumnDef="maritalStatus">
+            <ng-container matColumnDef="maritalStatusName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="100px"> Marital Status
                 </th>
-                <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.maritalStatus}}
+                <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.maritalStatusName}}
                 </td>
             </ng-container>
 
@@ -73,10 +91,11 @@
             </ng-container>
 
             <!-- Relation Degree Column -->
-            <ng-container matColumnDef="degreeOfRelation">
+            <ng-container matColumnDef="degreeOfRelationName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="150px"> Relation
                     Degree </th>
-                <td mat-cell *matCellDef="let element" fxFlex="150px"> {{element.degreeOfRelation}}
+                <td mat-cell *matCellDef="let element" fxFlex="150px">
+                    {{element.degreeOfRelationName}}
                 </td>
             </ng-container>
 
@@ -93,33 +112,11 @@
                 <td mat-cell *matCellDef="let element" fxFlex="100px"> {{element.remarks}} </td>
             </ng-container>
 
-            <!-- isWorking Column -->
-            <!-- <ng-container matColumnDef="isWorking">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="75px"> isWorking </th>
-                <td mat-cell *matCellDef="let element" fxFlex="75px">
-                    <mat-slide-toggle
-                                      [checked]="element.isWorking"
-                                      class="example-margin">
-                    </mat-slide-toggle>
-                </td>
-            </ng-container> -->
-
-            <!-- inNextTarget Column -->
-            <!-- <ng-container matColumnDef="inNextTarget">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="100px"> inNextTarget
-                </th>
-                <td mat-cell *matCellDef="let element" fxFlex="100px">
-                    <mat-slide-toggle
-                                      [checked]="element.inNextTarget"
-                                      class="example-margin">
-                    </mat-slide-toggle>
-                </td>
-            </ng-container> -->
-
             <!-- status Column -->
-            <ng-container matColumnDef="prospectStatus">
+            <ng-container matColumnDef="prospectStatusName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header fxFlex="75px"> Status </th>
-                <td mat-cell *matCellDef="let element" fxFlex="75px"> {{element.prospectStatus}} </td>
+                <td mat-cell *matCellDef="let element" fxFlex="75px"> {{element.prospectStatusName}}
+                </td>
             </ng-container>
 
             <!-- Action Column -->
@@ -134,7 +131,7 @@
                         <button mat-menu-item (click)="editBook(i)">
                             <span>Edit</span>
                         </button>
-                        <button mat-menu-item (click)="openDeleteDialog(i)">
+                        <button mat-menu-item (click)="openDeleteDialog(i, element)">
                             <span>Delete</span>
                         </button>
                     </mat-menu>
